# OpenGLExp

./: CMakeLists.txt  README.md  accanti.c  all.h  build-libfreenect.sh  cyril.c  dualwindow.c  dualwindow2.c  exp.c  gol.c  grid.c  jitter.h  main.c  main2.c  make-fail.sh  prepapre.sh  teapot.c  together.c  triangle.c  triangle.cpp  xbox-notes.txt  xbox.c
digital_impressions/: glpcview.c  impression.h  impressions.c  util.c  xbox.c
